--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ tr:last-child td {
 }
 
 button {
-  background: orangered;
+  background: lightcoral;
   border: none;
   padding: 5px 8px;
   border-radius: 4px;
